--- a/furniture/furni/templates/furni/contact.html
+++ b/furniture/furni/templates/furni/contact.html
@@ -15,18 +15,14 @@
               class="btn btn-white-outline">Explore</a></p>
         </div>
       </div>
-      <div class="col-lg-7">
-        <div class="hero-img-wrap">
-          <img src="{% static 'images\couch.png' %}" class="img-fluid">
-        </div>
-      </div>
+      
     </div>
   </div>
 </div>
 <!-- End Hero Section -->
 
 <!-- Start Contact Form -->
-<div class="untree_co-section">
+<div class="untree_co-section" style="margin-top: 140px; padding: 0;">
   <div class="container">
 
     <div class="block">
